@@ -11,11 +11,14 @@ Changes in progress (Moodle 2 version)
   * Save/Update attempts (from students view)
   * Backup/Restory activities (even from Moodle 1.9)
   * View current student attempts (pending adapt function to show all students when current user can grade)
+  * Teacher grade (pending save also HTML content and review scales behavior)
 
 - Pending:
-  * Add new tab for "Preview" results (currently there are showed in "View" tab)
+  * Add new tab for "Preview" results (currently they are showed in "View" tab)
   * Show number of attempt (or, at least, a message when is the last one)
   * Review format of the attempt summary information (to add bold to the titles, for instance)
+  * Pending review behaviour with groups
+
 
 Changes in progress (Moodle 1.9 version)
 ---------------------------------------------------------------------------------------
